--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services:
 
 before_install:
   - curl -fsSL https://deno.land/x/install/install.sh | sh
-
+  - export PATH="/home/travis/.deno/bin:$PATH"
+  
 script:
   - deno ./test.ts --allow-all
