--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Build Status](https://www.travis-ci.org/manyuanrong/deno_mysql.svg?branch=master)](https://www.travis-ci.org/manyuanrong/deno_mysql)",
   "main": "index.js",
   "scripts": {
-    "docs": "typedoc --ignoreCompilerErrors --entryPoint Client --mode file ./src --out ./docs"
+    "docs": "typedoc --theme minimal --ignoreCompilerErrors --excludePrivate --excludeExternals --entryPoint client.ts --mode file ./src --out ./docs"
   },
   "repository": {
     "type": "git",
