--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,5 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: denolib/deno-action@0.17.0
-      args: run -A test.ts
+      with:
+        args: run -A test.ts
