--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,14 @@ name: CI
 on: [push]
 
 jobs:
-  services：
-    mysql:
-      image: mysql:5.6
-      ports:
-        - 3306:3306
-      env:
-        MYSQL_ALLOW_EMPTY_PASSWORD: true
-    
   build:
+    services:
+      mysql:
+        image: mysql:5.6
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
 
     runs-on: ubuntu-latest
     
