--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
       mysql:
         image: mysql:5.6
         ports:
-          - 3306:3306
+          - 3307:3306
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: true
 
@@ -17,5 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: denolib/deno-action@0.17.0
+      env:
       with:
+        env:
+          DB_PORT: 3307
         args: run -A test.ts
