--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,31 @@ matrix:
   fast-finish: true
   include:
     - env:
-      - DB_VERSION: 5.5
+      - DB_VERSION: mysql:5.5
     - env:
-      - DB_VERSION: 5.6
+      - DB_VERSION: mysql:5.6
     - env:
-      - DB_VERSION: 5.7
+      - DB_VERSION: mysql:5.7
     - env:
-      - DB_VERSION: 8
+      - DB_VERSION: mysql:8
     - env:
-      - DB_VERSION: latest
+      - DB_VERSION: mysql:latest
+    - env:
+      - DB_VERSION: mariadb:5.5
+    - env:
+      - DB_VERSION: mariadb:10.2
+    - env:
+      - DB_VERSION: mariadb:10.3
+    - env:
+      - DB_VERSION: mariadb:10.4
+    - env:
+      - DB_VERSION: mariadb:latest
 
 before_install:
   - curl -fsSL https://deno.land/x/install/install.sh | sh
   - export PATH="/home/travis/.deno/bin:$PATH"
   
 script:
-  - docker run -d -p $DB_PORT:3306 -e MYSQL_ALLOW_EMPTY_PASSWORD=true mysql:$DB_VERSION
+  - docker run -d -p $DB_PORT:3306 -e MYSQL_ALLOW_EMPTY_PASSWORD=true $DB_VERSION
   - sleep 10
   - deno run --allow-all ./test.ts
