--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,16 @@ jobs:
     strategy:
       matrix:
         DB_VERSION:
-          - mysql:5.5,
-          - mysql:5.6,
-          - mysql:5.7,
-          - mysql:8,
-          - mysql:latest,
-          - mariadb:5.5,
-          - mariadb:10.2,
-          - mariadb:10.3,
-          - mariadb:10.4,
-          - mariadb:latest,
+          - mysql:5.5
+          - mysql:5.6
+          - mysql:5.7
+          - mysql:8
+          - mysql:latest
+          - mariadb:5.5
+          - mariadb:10.2
+          - mariadb:10.3
+          - mariadb:10.4
+          - mariadb:latest
 
     steps:
       - uses: actions/checkout@v1
