Test with latest Deno

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        DENO_VERSION:
+          - v1.2.2
+          - v1.x
         DB_VERSION:
           - mysql:5.5
           - mysql:5.6
@@ -21,10 +24,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Install Deno 1.2.2
+      - name: Install Deno ${{ matrix.DENO_VERSION }}
         uses: denolib/setup-deno@master
         with:
-          deno-version: 1.2.2
+          deno-version: ${{ matrix.DENO_VERSION }}
       - name: check fmt
         run: deno fmt --check
       - name: Start ${{ matrix.DB_VERSION }}
@@ -40,7 +43,7 @@ jobs:
       - name: Run tests (TCP)
         run: |
           deno test --allow-env --allow-net=127.0.0.1:3306 ./test.ts
-      - name: Run tests (UNIX domain socket)
+      - name: Run tests (--unstable) (UNIX domain socket)
         run: |
           SOCKPATH=/var/run/mysqld/mysqld.sock
           if [[ "${{ matrix.DB_VERSION }}" == "mysql:5.5" ]]; then
@@ -49,3 +52,7 @@ jobs:
           DB_SOCKPATH=$SOCKPATH TEST_METHODS=unix \
             deno test --unstable --allow-env --allow-net=127.0.0.1:3306 \
             --allow-read=/var/run/mysqld/ ./test.ts
+      - name: Install Deno 1.2.2
+        uses: denolib/setup-deno@master
+        with:
+          deno-version: 1.2.2
