--- a/deno.json
+++ b/deno.json
@@ -20,13 +20,12 @@
     "@std/async": "jsr:@std/async@^0.221.0",
     "@std/encoding": "jsr:@std/encoding@^0.221.0",
     "@std/flags": "jsr:@std/flags@^0.221.0",
+    "@std/fmt": "jsr:@std/fmt@^0.221.0",
     "@std/crypto": "jsr:@std/crypto@^0.221.0",
     "@std/log": "jsr:@std/log@^0.221.0",
     "@std/semver": "jsr:@std/semver@^0.220.1",
     "@std/testing": "jsr:@std/testing@^0.221.0",
-    "bytes_formater/": "./vendor/deno.land/x/bytes_formater@v1.4.0/",
-    "https://deno.land/": "./vendor/deno.land/",
-    "sql_builder/": "./vendor/deno.land/x/sql_builder@v1.9.1/"
+    "@halvardm/sqlx": "../deno-sqlx/mod.ts"
   },
   "lint": {
     "exclude": ["vendor"]
