--- a/deno.json
+++ b/deno.json
@@ -16,16 +16,19 @@
     "typedoc": "deno run -A npm:typedoc --theme minimal --ignoreCompilerErrors --excludePrivate --excludeExternals --entryPoint client.ts --mode file ./src --out ./docs"
   },
   "imports": {
+    "@halvardm/sqlx": "../deno-sqlx/mod.ts",
     "@std/assert": "jsr:@std/assert@^0.221.0",
     "@std/async": "jsr:@std/async@^0.221.0",
+    "@std/crypto": "jsr:@std/crypto@^0.221.0",
     "@std/encoding": "jsr:@std/encoding@^0.221.0",
     "@std/flags": "jsr:@std/flags@^0.221.0",
     "@std/fmt": "jsr:@std/fmt@^0.221.0",
-    "@std/crypto": "jsr:@std/crypto@^0.221.0",
+    "@std/fs": "jsr:@std/fs@^0.222.1",
     "@std/log": "jsr:@std/log@^0.221.0",
+    "@std/path": "jsr:@std/path@^0.222.1",
     "@std/semver": "jsr:@std/semver@^0.220.1",
     "@std/testing": "jsr:@std/testing@^0.221.0",
-    "@halvardm/sqlx": "../deno-sqlx/mod.ts"
+    "@std/text": "jsr:@std/text@^0.222.1"
   },
   "lint": {
     "exclude": ["vendor"]
