--- a/deno.json
+++ b/deno.json
@@ -9,11 +9,10 @@
     "format:check": "deno fmt --check",
     "type:check": "deno check mod.ts",
     "doc:check": "deno doc --lint src",
-    "test": "deno task db:restart && deno test --allow-env --allow-net=127.0.0.1:3306 ./test.ts; deno task db:stop",
+    "test": "deno task db:restart && deno test -A; deno task db:stop",
     "db:restart": "deno task db:stop && deno task db:start",
     "db:start": "docker compose up -d --remove-orphans --wait && sleep 2",
-    "db:stop": "docker compose down --remove-orphans --volumes",
-    "typedoc": "deno run -A npm:typedoc --theme minimal --ignoreCompilerErrors --excludePrivate --excludeExternals --entryPoint client.ts --mode file ./src --out ./docs"
+    "db:stop": "docker compose down --remove-orphans --volumes"
   },
   "imports": {
     "@halvardm/sqlx": "../deno-sqlx/mod.ts",
