--- a/deno.json
+++ b/deno.json
@@ -15,8 +15,7 @@
     "db:stop": "docker compose down --remove-orphans --volumes"
   },
   "imports": {
-    "@halvardm/sqlx": "../deno-sqlx/mod.ts",
-    "@halvardm/sqlx/testing": "../deno-sqlx/lib/testing.ts",
+    "@halvardm/sqlx": "jsr:@halvardm/sqlx@0.0.0-11",
     "@std/assert": "jsr:@std/assert@^0.221.0",
     "@std/async": "jsr:@std/async@^0.221.0",
     "@std/crypto": "jsr:@std/crypto@^0.221.0",
