--- a/deno.json
+++ b/deno.json
@@ -16,7 +16,6 @@
     "db:stop": "docker compose down --remove-orphans --volumes"
   },
   "imports": {
-    "@halvardm/sqlx": "jsr:@halvardm/sqlx@0.0.0-13",
     "@std/assert": "jsr:@std/assert@^0.221.0",
     "@std/async": "jsr:@std/async@^0.221.0",
     "@std/crypto": "jsr:@std/crypto@^0.221.0",
@@ -30,6 +29,8 @@
     "@std/testing": "jsr:@std/testing@^0.221.0",
     "@std/text": "jsr:@std/text@^0.222.1",
     "@std/yaml": "jsr:@std/yaml@^0.223.0",
-    "@stdext/encoding": "jsr:@stdext/encoding@^0.0.2"
+    "@stdext/collections": "jsr:@stdext/collections@^0.0.5",
+    "@stdext/encoding": "jsr:@stdext/encoding@^0.0.2",
+    "@stdext/sql": "jsr:@stdext/sql@0.0.0-5"
   }
 }
