--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@db/mysql",
-  "version": "2.12.2",
+  "version": "3.0.0-rc.1",
   "exports": "./mod.ts",
   "lock": false,
   "tasks": {
